minic/bin/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declarationList
Rule 2     declarationList -> declarationList declaration
Rule 3     declarationList -> declaration
Rule 4     declaration -> varDeclaration
Rule 5     declaration -> funDeclaration
Rule 6     varDeclaration -> typeSpecifier varDeclarationList SEMI
Rule 7     varDeclarationList -> varDeclarationList COMMA varDeclarationType
Rule 8     varDeclarationList -> varDeclarationType
Rule 9     varDeclarationType -> ID
Rule 10    varDeclarationType -> ID ASSIGN additiveExpression
Rule 11    varDeclarationType -> ID LBRACKET NUM RBRACKET
Rule 12    typeSpecifier -> INT
Rule 13    typeSpecifier -> VOID
Rule 14    funDeclaration -> typeSpecifier ID LPAREN params RPAREN compoundStmt
Rule 15    funDeclaration -> typeSpecifier MAIN LPAREN params RPAREN compoundStmt
Rule 16    params -> paramList
Rule 17    params -> VOID
Rule 18    params -> empty
Rule 19    paramList -> paramList COMMA param
Rule 20    paramList -> param
Rule 21    param -> typeSpecifier ID
Rule 22    param -> typeSpecifier ID LBRACKET RBRACKET
Rule 23    compoundStmt -> LBRACE localDeclarations statementList RBRACE
Rule 24    localDeclarations -> localDeclarations varDeclaration
Rule 25    localDeclarations -> empty
Rule 26    statementList -> statementList statement
Rule 27    statementList -> empty
Rule 28    statement -> expressionStmt
Rule 29    statement -> compoundStmt
Rule 30    statement -> selectionStmt
Rule 31    statement -> iterationStmt
Rule 32    statement -> returnStmt
Rule 33    statement -> outputStmt
Rule 34    expressionStmt -> expression SEMI
Rule 35    expressionStmt -> SEMI
Rule 36    selectionStmt -> IF LPAREN expression RPAREN statement
Rule 37    selectionStmt -> IF LPAREN expression RPAREN statement ELSE statement
Rule 38    iterationStmt -> WHILE LPAREN expression RPAREN statement
Rule 39    returnStmt -> RETURN SEMI
Rule 40    returnStmt -> RETURN expression SEMI
Rule 41    outputStmt -> OUTPUT LPAREN expression RPAREN SEMI
Rule 42    expression -> var ASSIGN expression
Rule 43    expression -> simpleExpression
Rule 44    expression -> var PLUS_ASSIGN expression
Rule 45    expression -> var MINUS_ASSIGN expression
Rule 46    expression -> ternaryExpression
Rule 47    var -> ID
Rule 48    var -> ID LBRACKET expression RBRACKET
Rule 49    ternaryExpression -> simpleExpression QUESTION logical_expression COLON logical_expression
Rule 50    simpleExpression -> logical_expression relop logical_expression
Rule 51    simpleExpression -> logical_expression
Rule 52    relop -> GT
Rule 53    relop -> LT
Rule 54    relop -> GE
Rule 55    relop -> LE
Rule 56    relop -> EQ
Rule 57    relop -> NEQ
Rule 58    logical_expression -> logical_expression logical_op bitwise_expression
Rule 59    logical_expression -> bitwise_expression
Rule 60    logical_op -> AND
Rule 61    logical_op -> OR
Rule 62    bitwise_expression -> bitwise_expression bitwise_op shiftExpression
Rule 63    bitwise_expression -> shiftExpression
Rule 64    bitwise_op -> LAN
Rule 65    bitwise_op -> LOR
Rule 66    bitwise_op -> XOR
Rule 67    shiftExpression -> shiftExpression shiftop additiveExpression
Rule 68    shiftExpression -> additiveExpression
Rule 69    shiftop -> SHL
Rule 70    shiftop -> SHR
Rule 71    additiveExpression -> additiveExpression addop term
Rule 72    additiveExpression -> term
Rule 73    addop -> PLUS
Rule 74    addop -> MINUS
Rule 75    term -> term mulop factor
Rule 76    term -> factor
Rule 77    mulop -> TIMES
Rule 78    mulop -> DIVIDE
Rule 79    mulop -> MOD
Rule 80    factor -> LPAREN expression RPAREN
Rule 81    factor -> var
Rule 82    factor -> call
Rule 83    factor -> NUM
Rule 84    factor -> NOT factor
Rule 85    factor -> INC factor
Rule 86    factor -> DEC factor
Rule 87    factor -> NEGATION factor
Rule 88    call -> ID LPAREN args RPAREN
Rule 89    call -> INPUT LPAREN args RPAREN
Rule 90    args -> argList
Rule 91    args -> VOID
Rule 92    args -> empty
Rule 93    argList -> argList COMMA expression
Rule 94    argList -> expression
Rule 95    empty -> <empty>

Terminals, with rules where they appear

AND                  : 60
ASSIGN               : 10 42
COLON                : 49
COMMA                : 7 19 93
DEC                  : 86
DIVIDE               : 78
ELSE                 : 37
EQ                   : 56
GE                   : 54
GT                   : 52
ID                   : 9 10 11 14 21 22 47 48 88
IF                   : 36 37
INC                  : 85
INPUT                : 89
INT                  : 12
LAN                  : 64
LBRACE               : 23
LBRACKET             : 11 22 48
LE                   : 55
LOR                  : 65
LPAREN               : 14 15 36 37 38 41 80 88 89
LT                   : 53
MAIN                 : 15
MINUS                : 74
MINUS_ASSIGN         : 45
MOD                  : 79
NEGATION             : 87
NEQ                  : 57
NOT                  : 84
NUM                  : 11 83
OR                   : 61
OUTPUT               : 41
PLUS                 : 73
PLUS_ASSIGN          : 44
QUESTION             : 49
RBRACE               : 23
RBRACKET             : 11 22 48
RETURN               : 39 40
RPAREN               : 14 15 36 37 38 41 80 88 89
SEMI                 : 6 34 35 39 40 41
SHL                  : 69
SHR                  : 70
TIMES                : 77
VOID                 : 13 17 91
WHILE                : 38
XOR                  : 66
error                : 

Nonterminals, with rules where they appear

additiveExpression   : 10 67 68 71
addop                : 71
argList              : 90 93
args                 : 88 89
bitwise_expression   : 58 59 62
bitwise_op           : 62
call                 : 82
compoundStmt         : 14 15 29
declaration          : 2 3
declarationList      : 1 2
empty                : 18 25 27 92
expression           : 34 36 37 38 40 41 42 44 45 48 80 93 94
expressionStmt       : 28
factor               : 75 76 84 85 86 87
funDeclaration       : 5
iterationStmt        : 31
localDeclarations    : 23 24
logical_expression   : 49 49 50 50 51 58
logical_op           : 58
mulop                : 75
outputStmt           : 33
param                : 19 20
paramList            : 16 19
params               : 14 15
program              : 0
relop                : 50
returnStmt           : 32
selectionStmt        : 30
shiftExpression      : 62 63 67
shiftop              : 67
simpleExpression     : 43 49
statement            : 26 36 37 37 38
statementList        : 23 26
term                 : 71 72 75
ternaryExpression    : 46
typeSpecifier        : 6 14 15 21 22
var                  : 42 44 45 81
varDeclaration       : 4 24
varDeclarationList   : 6 7
varDeclarationType   : 7 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declarationList
    (2) declarationList -> . declarationList declaration
    (3) declarationList -> . declaration
    (4) declaration -> . varDeclaration
    (5) declaration -> . funDeclaration
    (6) varDeclaration -> . typeSpecifier varDeclarationList SEMI
    (14) funDeclaration -> . typeSpecifier ID LPAREN params RPAREN compoundStmt
    (15) funDeclaration -> . typeSpecifier MAIN LPAREN params RPAREN compoundStmt
    (12) typeSpecifier -> . INT
    (13) typeSpecifier -> . VOID

    INT             shift and go to state 7
    VOID            shift and go to state 8

    program                        shift and go to state 1
    declarationList                shift and go to state 2
    declaration                    shift and go to state 3
    varDeclaration                 shift and go to state 4
    funDeclaration                 shift and go to state 5
    typeSpecifier                  shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> declarationList .
    (2) declarationList -> declarationList . declaration
    (4) declaration -> . varDeclaration
    (5) declaration -> . funDeclaration
    (6) varDeclaration -> . typeSpecifier varDeclarationList SEMI
    (14) funDeclaration -> . typeSpecifier ID LPAREN params RPAREN compoundStmt
    (15) funDeclaration -> . typeSpecifier MAIN LPAREN params RPAREN compoundStmt
    (12) typeSpecifier -> . INT
    (13) typeSpecifier -> . VOID

    $end            reduce using rule 1 (program -> declarationList .)
    INT             shift and go to state 7
    VOID            shift and go to state 8

    declaration                    shift and go to state 9
    varDeclaration                 shift and go to state 4
    funDeclaration                 shift and go to state 5
    typeSpecifier                  shift and go to state 6

state 3

    (3) declarationList -> declaration .

    INT             reduce using rule 3 (declarationList -> declaration .)
    VOID            reduce using rule 3 (declarationList -> declaration .)
    $end            reduce using rule 3 (declarationList -> declaration .)


state 4

    (4) declaration -> varDeclaration .

    INT             reduce using rule 4 (declaration -> varDeclaration .)
    VOID            reduce using rule 4 (declaration -> varDeclaration .)
    $end            reduce using rule 4 (declaration -> varDeclaration .)


state 5

    (5) declaration -> funDeclaration .

    INT             reduce using rule 5 (declaration -> funDeclaration .)
    VOID            reduce using rule 5 (declaration -> funDeclaration .)
    $end            reduce using rule 5 (declaration -> funDeclaration .)


state 6

    (6) varDeclaration -> typeSpecifier . varDeclarationList SEMI
    (14) funDeclaration -> typeSpecifier . ID LPAREN params RPAREN compoundStmt
    (15) funDeclaration -> typeSpecifier . MAIN LPAREN params RPAREN compoundStmt
    (7) varDeclarationList -> . varDeclarationList COMMA varDeclarationType
    (8) varDeclarationList -> . varDeclarationType
    (9) varDeclarationType -> . ID
    (10) varDeclarationType -> . ID ASSIGN additiveExpression
    (11) varDeclarationType -> . ID LBRACKET NUM RBRACKET

    ID              shift and go to state 11
    MAIN            shift and go to state 12

    varDeclarationList             shift and go to state 10
    varDeclarationType             shift and go to state 13

state 7

    (12) typeSpecifier -> INT .

    ID              reduce using rule 12 (typeSpecifier -> INT .)
    MAIN            reduce using rule 12 (typeSpecifier -> INT .)


state 8

    (13) typeSpecifier -> VOID .

    ID              reduce using rule 13 (typeSpecifier -> VOID .)
    MAIN            reduce using rule 13 (typeSpecifier -> VOID .)


state 9

    (2) declarationList -> declarationList declaration .

    INT             reduce using rule 2 (declarationList -> declarationList declaration .)
    VOID            reduce using rule 2 (declarationList -> declarationList declaration .)
    $end            reduce using rule 2 (declarationList -> declarationList declaration .)


state 10

    (6) varDeclaration -> typeSpecifier varDeclarationList . SEMI
    (7) varDeclarationList -> varDeclarationList . COMMA varDeclarationType

    SEMI            shift and go to state 14
    COMMA           shift and go to state 15


state 11

    (14) funDeclaration -> typeSpecifier ID . LPAREN params RPAREN compoundStmt
    (9) varDeclarationType -> ID .
    (10) varDeclarationType -> ID . ASSIGN additiveExpression
    (11) varDeclarationType -> ID . LBRACKET NUM RBRACKET

    LPAREN          shift and go to state 16
    SEMI            reduce using rule 9 (varDeclarationType -> ID .)
    COMMA           reduce using rule 9 (varDeclarationType -> ID .)
    ASSIGN          shift and go to state 17
    LBRACKET        shift and go to state 18


state 12

    (15) funDeclaration -> typeSpecifier MAIN . LPAREN params RPAREN compoundStmt

    LPAREN          shift and go to state 19


state 13

    (8) varDeclarationList -> varDeclarationType .

    SEMI            reduce using rule 8 (varDeclarationList -> varDeclarationType .)
    COMMA           reduce using rule 8 (varDeclarationList -> varDeclarationType .)


state 14

    (6) varDeclaration -> typeSpecifier varDeclarationList SEMI .

    INT             reduce using rule 6 (varDeclaration -> typeSpecifier varDeclarationList SEMI .)
    VOID            reduce using rule 6 (varDeclaration -> typeSpecifier varDeclarationList SEMI .)
    $end            reduce using rule 6 (varDeclaration -> typeSpecifier varDeclarationList SEMI .)
    RBRACE          reduce using rule 6 (varDeclaration -> typeSpecifier varDeclarationList SEMI .)
    SEMI            reduce using rule 6 (varDeclaration -> typeSpecifier varDeclarationList SEMI .)
    LBRACE          reduce using rule 6 (varDeclaration -> typeSpecifier varDeclarationList SEMI .)
    IF              reduce using rule 6 (varDeclaration -> typeSpecifier varDeclarationList SEMI .)
    WHILE           reduce using rule 6 (varDeclaration -> typeSpecifier varDeclarationList SEMI .)
    RETURN          reduce using rule 6 (varDeclaration -> typeSpecifier varDeclarationList SEMI .)
    OUTPUT          reduce using rule 6 (varDeclaration -> typeSpecifier varDeclarationList SEMI .)
    ID              reduce using rule 6 (varDeclaration -> typeSpecifier varDeclarationList SEMI .)
    LPAREN          reduce using rule 6 (varDeclaration -> typeSpecifier varDeclarationList SEMI .)
    NUM             reduce using rule 6 (varDeclaration -> typeSpecifier varDeclarationList SEMI .)
    NOT             reduce using rule 6 (varDeclaration -> typeSpecifier varDeclarationList SEMI .)
    INC             reduce using rule 6 (varDeclaration -> typeSpecifier varDeclarationList SEMI .)
    DEC             reduce using rule 6 (varDeclaration -> typeSpecifier varDeclarationList SEMI .)
    NEGATION        reduce using rule 6 (varDeclaration -> typeSpecifier varDeclarationList SEMI .)
    INPUT           reduce using rule 6 (varDeclaration -> typeSpecifier varDeclarationList SEMI .)


state 15

    (7) varDeclarationList -> varDeclarationList COMMA . varDeclarationType
    (9) varDeclarationType -> . ID
    (10) varDeclarationType -> . ID ASSIGN additiveExpression
    (11) varDeclarationType -> . ID LBRACKET NUM RBRACKET

    ID              shift and go to state 21

    varDeclarationType             shift and go to state 20

state 16

    (14) funDeclaration -> typeSpecifier ID LPAREN . params RPAREN compoundStmt
    (16) params -> . paramList
    (17) params -> . VOID
    (18) params -> . empty
    (19) paramList -> . paramList COMMA param
    (20) paramList -> . param
    (95) empty -> .
    (21) param -> . typeSpecifier ID
    (22) param -> . typeSpecifier ID LBRACKET RBRACKET
    (12) typeSpecifier -> . INT
    (13) typeSpecifier -> . VOID

    VOID            shift and go to state 25
    RPAREN          reduce using rule 95 (empty -> .)
    INT             shift and go to state 7

    typeSpecifier                  shift and go to state 22
    params                         shift and go to state 23
    paramList                      shift and go to state 24
    empty                          shift and go to state 26
    param                          shift and go to state 27

state 17

    (10) varDeclarationType -> ID ASSIGN . additiveExpression
    (71) additiveExpression -> . additiveExpression addop term
    (72) additiveExpression -> . term
    (75) term -> . term mulop factor
    (76) term -> . factor
    (80) factor -> . LPAREN expression RPAREN
    (81) factor -> . var
    (82) factor -> . call
    (83) factor -> . NUM
    (84) factor -> . NOT factor
    (85) factor -> . INC factor
    (86) factor -> . DEC factor
    (87) factor -> . NEGATION factor
    (47) var -> . ID
    (48) var -> . ID LBRACKET expression RBRACKET
    (88) call -> . ID LPAREN args RPAREN
    (89) call -> . INPUT LPAREN args RPAREN

    LPAREN          shift and go to state 32
    NUM             shift and go to state 35
    NOT             shift and go to state 36
    INC             shift and go to state 37
    DEC             shift and go to state 38
    NEGATION        shift and go to state 39
    ID              shift and go to state 28
    INPUT           shift and go to state 40

    additiveExpression             shift and go to state 29
    term                           shift and go to state 30
    factor                         shift and go to state 31
    var                            shift and go to state 33
    call                           shift and go to state 34

state 18

    (11) varDeclarationType -> ID LBRACKET . NUM RBRACKET

    NUM             shift and go to state 41


state 19

    (15) funDeclaration -> typeSpecifier MAIN LPAREN . params RPAREN compoundStmt
    (16) params -> . paramList
    (17) params -> . VOID
    (18) params -> . empty
    (19) paramList -> . paramList COMMA param
    (20) paramList -> . param
    (95) empty -> .
    (21) param -> . typeSpecifier ID
    (22) param -> . typeSpecifier ID LBRACKET RBRACKET
    (12) typeSpecifier -> . INT
    (13) typeSpecifier -> . VOID

    VOID            shift and go to state 25
    RPAREN          reduce using rule 95 (empty -> .)
    INT             shift and go to state 7

    typeSpecifier                  shift and go to state 22
    params                         shift and go to state 42
    paramList                      shift and go to state 24
    empty                          shift and go to state 26
    param                          shift and go to state 27

state 20

    (7) varDeclarationList -> varDeclarationList COMMA varDeclarationType .

    SEMI            reduce using rule 7 (varDeclarationList -> varDeclarationList COMMA varDeclarationType .)
    COMMA           reduce using rule 7 (varDeclarationList -> varDeclarationList COMMA varDeclarationType .)


state 21

    (9) varDeclarationType -> ID .
    (10) varDeclarationType -> ID . ASSIGN additiveExpression
    (11) varDeclarationType -> ID . LBRACKET NUM RBRACKET

    SEMI            reduce using rule 9 (varDeclarationType -> ID .)
    COMMA           reduce using rule 9 (varDeclarationType -> ID .)
    ASSIGN          shift and go to state 17
    LBRACKET        shift and go to state 18


state 22

    (21) param -> typeSpecifier . ID
    (22) param -> typeSpecifier . ID LBRACKET RBRACKET

    ID              shift and go to state 43


state 23

    (14) funDeclaration -> typeSpecifier ID LPAREN params . RPAREN compoundStmt

    RPAREN          shift and go to state 44


state 24

    (16) params -> paramList .
    (19) paramList -> paramList . COMMA param

    RPAREN          reduce using rule 16 (params -> paramList .)
    COMMA           shift and go to state 45


state 25

    (17) params -> VOID .
    (13) typeSpecifier -> VOID .

    RPAREN          reduce using rule 17 (params -> VOID .)
    ID              reduce using rule 13 (typeSpecifier -> VOID .)


state 26

    (18) params -> empty .

    RPAREN          reduce using rule 18 (params -> empty .)


state 27

    (20) paramList -> param .

    COMMA           reduce using rule 20 (paramList -> param .)
    RPAREN          reduce using rule 20 (paramList -> param .)


state 28

    (47) var -> ID .
    (48) var -> ID . LBRACKET expression RBRACKET
    (88) call -> ID . LPAREN args RPAREN

    TIMES           reduce using rule 47 (var -> ID .)
    DIVIDE          reduce using rule 47 (var -> ID .)
    MOD             reduce using rule 47 (var -> ID .)
    PLUS            reduce using rule 47 (var -> ID .)
    MINUS           reduce using rule 47 (var -> ID .)
    SEMI            reduce using rule 47 (var -> ID .)
    COMMA           reduce using rule 47 (var -> ID .)
    ASSIGN          reduce using rule 47 (var -> ID .)
    PLUS_ASSIGN     reduce using rule 47 (var -> ID .)
    MINUS_ASSIGN    reduce using rule 47 (var -> ID .)
    SHL             reduce using rule 47 (var -> ID .)
    SHR             reduce using rule 47 (var -> ID .)
    LAN             reduce using rule 47 (var -> ID .)
    LOR             reduce using rule 47 (var -> ID .)
    XOR             reduce using rule 47 (var -> ID .)
    GT              reduce using rule 47 (var -> ID .)
    LT              reduce using rule 47 (var -> ID .)
    GE              reduce using rule 47 (var -> ID .)
    LE              reduce using rule 47 (var -> ID .)
    EQ              reduce using rule 47 (var -> ID .)
    NEQ             reduce using rule 47 (var -> ID .)
    AND             reduce using rule 47 (var -> ID .)
    OR              reduce using rule 47 (var -> ID .)
    QUESTION        reduce using rule 47 (var -> ID .)
    RPAREN          reduce using rule 47 (var -> ID .)
    RBRACKET        reduce using rule 47 (var -> ID .)
    COLON           reduce using rule 47 (var -> ID .)
    LBRACKET        shift and go to state 46
    LPAREN          shift and go to state 47


state 29

    (10) varDeclarationType -> ID ASSIGN additiveExpression .
    (71) additiveExpression -> additiveExpression . addop term
    (73) addop -> . PLUS
    (74) addop -> . MINUS

    SEMI            reduce using rule 10 (varDeclarationType -> ID ASSIGN additiveExpression .)
    COMMA           reduce using rule 10 (varDeclarationType -> ID ASSIGN additiveExpression .)
    PLUS            shift and go to state 49
    MINUS           shift and go to state 50

    addop                          shift and go to state 48

state 30

    (72) additiveExpression -> term .
    (75) term -> term . mulop factor
    (77) mulop -> . TIMES
    (78) mulop -> . DIVIDE
    (79) mulop -> . MOD

    PLUS            reduce using rule 72 (additiveExpression -> term .)
    MINUS           reduce using rule 72 (additiveExpression -> term .)
    SEMI            reduce using rule 72 (additiveExpression -> term .)
    COMMA           reduce using rule 72 (additiveExpression -> term .)
    SHL             reduce using rule 72 (additiveExpression -> term .)
    SHR             reduce using rule 72 (additiveExpression -> term .)
    LAN             reduce using rule 72 (additiveExpression -> term .)
    LOR             reduce using rule 72 (additiveExpression -> term .)
    XOR             reduce using rule 72 (additiveExpression -> term .)
    GT              reduce using rule 72 (additiveExpression -> term .)
    LT              reduce using rule 72 (additiveExpression -> term .)
    GE              reduce using rule 72 (additiveExpression -> term .)
    LE              reduce using rule 72 (additiveExpression -> term .)
    EQ              reduce using rule 72 (additiveExpression -> term .)
    NEQ             reduce using rule 72 (additiveExpression -> term .)
    AND             reduce using rule 72 (additiveExpression -> term .)
    OR              reduce using rule 72 (additiveExpression -> term .)
    QUESTION        reduce using rule 72 (additiveExpression -> term .)
    RPAREN          reduce using rule 72 (additiveExpression -> term .)
    RBRACKET        reduce using rule 72 (additiveExpression -> term .)
    COLON           reduce using rule 72 (additiveExpression -> term .)
    TIMES           shift and go to state 52
    DIVIDE          shift and go to state 53
    MOD             shift and go to state 54

    mulop                          shift and go to state 51

state 31

    (76) term -> factor .

    TIMES           reduce using rule 76 (term -> factor .)
    DIVIDE          reduce using rule 76 (term -> factor .)
    MOD             reduce using rule 76 (term -> factor .)
    PLUS            reduce using rule 76 (term -> factor .)
    MINUS           reduce using rule 76 (term -> factor .)
    SEMI            reduce using rule 76 (term -> factor .)
    COMMA           reduce using rule 76 (term -> factor .)
    SHL             reduce using rule 76 (term -> factor .)
    SHR             reduce using rule 76 (term -> factor .)
    LAN             reduce using rule 76 (term -> factor .)
    LOR             reduce using rule 76 (term -> factor .)
    XOR             reduce using rule 76 (term -> factor .)
    GT              reduce using rule 76 (term -> factor .)
    LT              reduce using rule 76 (term -> factor .)
    GE              reduce using rule 76 (term -> factor .)
    LE              reduce using rule 76 (term -> factor .)
    EQ              reduce using rule 76 (term -> factor .)
    NEQ             reduce using rule 76 (term -> factor .)
    AND             reduce using rule 76 (term -> factor .)
    OR              reduce using rule 76 (term -> factor .)
    QUESTION        reduce using rule 76 (term -> factor .)
    RPAREN          reduce using rule 76 (term -> factor .)
    RBRACKET        reduce using rule 76 (term -> factor .)
    COLON           reduce using rule 76 (term -> factor .)


state 32

    (80) factor -> LPAREN . expression RPAREN
    (42) expression -> . var ASSIGN expression
    (43) expression -> . simpleExpression
    (44) expression -> . var PLUS_ASSIGN expression
    (45) expression -> . var MINUS_ASSIGN expression
    (46) expression -> . ternaryExpression
    (47) var -> . ID
    (48) var -> . ID LBRACKET expression RBRACKET
    (50) simpleExpression -> . logical_expression relop logical_expression
    (51) simpleExpression -> . logical_expression
    (49) ternaryExpression -> . simpleExpression QUESTION logical_expression COLON logical_expression
    (58) logical_expression -> . logical_expression logical_op bitwise_expression
    (59) logical_expression -> . bitwise_expression
    (62) bitwise_expression -> . bitwise_expression bitwise_op shiftExpression
    (63) bitwise_expression -> . shiftExpression
    (67) shiftExpression -> . shiftExpression shiftop additiveExpression
    (68) shiftExpression -> . additiveExpression
    (71) additiveExpression -> . additiveExpression addop term
    (72) additiveExpression -> . term
    (75) term -> . term mulop factor
    (76) term -> . factor
    (80) factor -> . LPAREN expression RPAREN
    (81) factor -> . var
    (82) factor -> . call
    (83) factor -> . NUM
    (84) factor -> . NOT factor
    (85) factor -> . INC factor
    (86) factor -> . DEC factor
    (87) factor -> . NEGATION factor
    (88) call -> . ID LPAREN args RPAREN
    (89) call -> . INPUT LPAREN args RPAREN

    ID              shift and go to state 28
    LPAREN          shift and go to state 32
    NUM             shift and go to state 35
    NOT             shift and go to state 36
    INC             shift and go to state 37
    DEC             shift and go to state 38
    NEGATION        shift and go to state 39
    INPUT           shift and go to state 40

    expression                     shift and go to state 55
    var                            shift and go to state 56
    simpleExpression               shift and go to state 57
    ternaryExpression              shift and go to state 58
    logical_expression             shift and go to state 59
    bitwise_expression             shift and go to state 60
    shiftExpression                shift and go to state 61
    additiveExpression             shift and go to state 62
    term                           shift and go to state 30
    factor                         shift and go to state 31
    call                           shift and go to state 34

state 33

    (81) factor -> var .

    TIMES           reduce using rule 81 (factor -> var .)
    DIVIDE          reduce using rule 81 (factor -> var .)
    MOD             reduce using rule 81 (factor -> var .)
    PLUS            reduce using rule 81 (factor -> var .)
    MINUS           reduce using rule 81 (factor -> var .)
    SEMI            reduce using rule 81 (factor -> var .)
    COMMA           reduce using rule 81 (factor -> var .)
    SHL             reduce using rule 81 (factor -> var .)
    SHR             reduce using rule 81 (factor -> var .)
    LAN             reduce using rule 81 (factor -> var .)
    LOR             reduce using rule 81 (factor -> var .)
    XOR             reduce using rule 81 (factor -> var .)
    GT              reduce using rule 81 (factor -> var .)
    LT              reduce using rule 81 (factor -> var .)
    GE              reduce using rule 81 (factor -> var .)
    LE              reduce using rule 81 (factor -> var .)
    EQ              reduce using rule 81 (factor -> var .)
    NEQ             reduce using rule 81 (factor -> var .)
    AND             reduce using rule 81 (factor -> var .)
    OR              reduce using rule 81 (factor -> var .)
    QUESTION        reduce using rule 81 (factor -> var .)
    RPAREN          reduce using rule 81 (factor -> var .)
    RBRACKET        reduce using rule 81 (factor -> var .)
    COLON           reduce using rule 81 (factor -> var .)


state 34

    (82) factor -> call .

    TIMES           reduce using rule 82 (factor -> call .)
    DIVIDE          reduce using rule 82 (factor -> call .)
    MOD             reduce using rule 82 (factor -> call .)
    PLUS            reduce using rule 82 (factor -> call .)
    MINUS           reduce using rule 82 (factor -> call .)
    SEMI            reduce using rule 82 (factor -> call .)
    COMMA           reduce using rule 82 (factor -> call .)
    SHL             reduce using rule 82 (factor -> call .)
    SHR             reduce using rule 82 (factor -> call .)
    LAN             reduce using rule 82 (factor -> call .)
    LOR             reduce using rule 82 (factor -> call .)
    XOR             reduce using rule 82 (factor -> call .)
    GT              reduce using rule 82 (factor -> call .)
    LT              reduce using rule 82 (factor -> call .)
    GE              reduce using rule 82 (factor -> call .)
    LE              reduce using rule 82 (factor -> call .)
    EQ              reduce using rule 82 (factor -> call .)
    NEQ             reduce using rule 82 (factor -> call .)
    AND             reduce using rule 82 (factor -> call .)
    OR              reduce using rule 82 (factor -> call .)
    QUESTION        reduce using rule 82 (factor -> call .)
    RPAREN          reduce using rule 82 (factor -> call .)
    RBRACKET        reduce using rule 82 (factor -> call .)
    COLON           reduce using rule 82 (factor -> call .)


state 35

    (83) factor -> NUM .

    TIMES           reduce using rule 83 (factor -> NUM .)
    DIVIDE          reduce using rule 83 (factor -> NUM .)
    MOD             reduce using rule 83 (factor -> NUM .)
    PLUS            reduce using rule 83 (factor -> NUM .)
    MINUS           reduce using rule 83 (factor -> NUM .)
    SEMI            reduce using rule 83 (factor -> NUM .)
    COMMA           reduce using rule 83 (factor -> NUM .)
    SHL             reduce using rule 83 (factor -> NUM .)
    SHR             reduce using rule 83 (factor -> NUM .)
    LAN             reduce using rule 83 (factor -> NUM .)
    LOR             reduce using rule 83 (factor -> NUM .)
    XOR             reduce using rule 83 (factor -> NUM .)
    GT              reduce using rule 83 (factor -> NUM .)
    LT              reduce using rule 83 (factor -> NUM .)
    GE              reduce using rule 83 (factor -> NUM .)
    LE              reduce using rule 83 (factor -> NUM .)
    EQ              reduce using rule 83 (factor -> NUM .)
    NEQ             reduce using rule 83 (factor -> NUM .)
    AND             reduce using rule 83 (factor -> NUM .)
    OR              reduce using rule 83 (factor -> NUM .)
    QUESTION        reduce using rule 83 (factor -> NUM .)
    RPAREN          reduce using rule 83 (factor -> NUM .)
    RBRACKET        reduce using rule 83 (factor -> NUM .)
    COLON           reduce using rule 83 (factor -> NUM .)


state 36

    (84) factor -> NOT . factor
    (80) factor -> . LPAREN expression RPAREN
    (81) factor -> . var
    (82) factor -> . call
    (83) factor -> . NUM
    (84) factor -> . NOT factor
    (85) factor -> . INC factor
    (86) factor -> . DEC factor
    (87) factor -> . NEGATION factor
    (47) var -> . ID
    (48) var -> . ID LBRACKET expression RBRACKET
    (88) call -> . ID LPAREN args RPAREN
    (89) call -> . INPUT LPAREN args RPAREN

    LPAREN          shift and go to state 32
    NUM             shift and go to state 35
    NOT             shift and go to state 36
    INC             shift and go to state 37
    DEC             shift and go to state 38
    NEGATION        shift and go to state 39
    ID              shift and go to state 28
    INPUT           shift and go to state 40

    factor                         shift and go to state 63
    var                            shift and go to state 33
    call                           shift and go to state 34

state 37

    (85) factor -> INC . factor
    (80) factor -> . LPAREN expression RPAREN
    (81) factor -> . var
    (82) factor -> . call
    (83) factor -> . NUM
    (84) factor -> . NOT factor
    (85) factor -> . INC factor
    (86) factor -> . DEC factor
    (87) factor -> . NEGATION factor
    (47) var -> . ID
    (48) var -> . ID LBRACKET expression RBRACKET
    (88) call -> . ID LPAREN args RPAREN
    (89) call -> . INPUT LPAREN args RPAREN

    LPAREN          shift and go to state 32
    NUM             shift and go to state 35
    NOT             shift and go to state 36
    INC             shift and go to state 37
    DEC             shift and go to state 38
    NEGATION        shift and go to state 39
    ID              shift and go to state 28
    INPUT           shift and go to state 40

    factor                         shift and go to state 64
    var                            shift and go to state 33
    call                           shift and go to state 34

state 38

    (86) factor -> DEC . factor
    (80) factor -> . LPAREN expression RPAREN
    (81) factor -> . var
    (82) factor -> . call
    (83) factor -> . NUM
    (84) factor -> . NOT factor
    (85) factor -> . INC factor
    (86) factor -> . DEC factor
    (87) factor -> . NEGATION factor
    (47) var -> . ID
    (48) var -> . ID LBRACKET expression RBRACKET
    (88) call -> . ID LPAREN args RPAREN
    (89) call -> . INPUT LPAREN args RPAREN

    LPAREN          shift and go to state 32
    NUM             shift and go to state 35
    NOT             shift and go to state 36
    INC             shift and go to state 37
    DEC             shift and go to state 38
    NEGATION        shift and go to state 39
    ID              shift and go to state 28
    INPUT           shift and go to state 40

    factor                         shift and go to state 65
    var                            shift and go to state 33
    call                           shift and go to state 34

state 39

    (87) factor -> NEGATION . factor
    (80) factor -> . LPAREN expression RPAREN
    (81) factor -> . var
    (82) factor -> . call
    (83) factor -> . NUM
    (84) factor -> . NOT factor
    (85) factor -> . INC factor
    (86) factor -> . DEC factor
    (87) factor -> . NEGATION factor
    (47) var -> . ID
    (48) var -> . ID LBRACKET expression RBRACKET
    (88) call -> . ID LPAREN args RPAREN
    (89) call -> . INPUT LPAREN args RPAREN

    LPAREN          shift and go to state 32
    NUM             shift and go to state 35
    NOT             shift and go to state 36
    INC             shift and go to state 37
    DEC             shift and go to state 38
    NEGATION        shift and go to state 39
    ID              shift and go to state 28
    INPUT           shift and go to state 40

    factor                         shift and go to state 66
    var                            shift and go to state 33
    call                           shift and go to state 34

state 40

    (89) call -> INPUT . LPAREN args RPAREN

    LPAREN          shift and go to state 67


state 41

    (11) varDeclarationType -> ID LBRACKET NUM . RBRACKET

    RBRACKET        shift and go to state 68


state 42

    (15) funDeclaration -> typeSpecifier MAIN LPAREN params . RPAREN compoundStmt

    RPAREN          shift and go to state 69


state 43

    (21) param -> typeSpecifier ID .
    (22) param -> typeSpecifier ID . LBRACKET RBRACKET

    COMMA           reduce using rule 21 (param -> typeSpecifier ID .)
    RPAREN          reduce using rule 21 (param -> typeSpecifier ID .)
    LBRACKET        shift and go to state 70


state 44

    (14) funDeclaration -> typeSpecifier ID LPAREN params RPAREN . compoundStmt
    (23) compoundStmt -> . LBRACE localDeclarations statementList RBRACE

    LBRACE          shift and go to state 72
